# azure-app-test

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: main_python-azure-web-app.yml  main_python-test-app.yml
src/: db_connection.py  employees_manager.py
src/api/: server.py
src/api/routes/: employees.py
